<resources>
    <string name="app_name">NavigationDrawer</string>
    <string name="Nav_home">Home</string>
    <string name="Nav_favorite">Favorite</string>
    <string name="Nav_history">History</string>
    <string name="Nav_account">Account</string>
    <string name="Nav_profile">My Profile</string>
    <string name="Nav_change_Password">Change Password</string>
    <string name="Nav_open">Open navigation drawer</string>
    <string name="Nav_close">Close navigation drawer</string>

    <string name="menu_search">Search</string>
    <string name="menu_settings">Setting</string>
    <string name="menu_navigation">Navigation</string>
</resources>