<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/Nav_home" />

        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_favorite"
            android:title="@string/Nav_favorite" />

        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history"
            android:title="@string/Nav_history" />

    </group>

    <item android:title="@string/Nav_account" >
        <menu>
            <item
                android:id="@+id/nav_my_profile"
                android:icon="@drawable/ic_person"
                android:title="@string/Nav_profile" />

            <item
                android:id="@+id/nav_change_password"
                android:icon="@drawable/ic_lock"
                android:title="@string/Nav_change_Password" />

        </menu>
    </item>

</menu>